--- a/BrowserController/LayoutInvestigation.html
+++ b/BrowserController/LayoutInvestigation.html
@@ -4,7 +4,7 @@
         <style>
             .parent {
                 display: grid;
-                grid-template-columns: repeat(3, 150px);
+                grid-template-columns: repeat(3, 250px);
                 grid-template-rows: repeat(2, 150px);
                 grid-gap: 1rem;
                 justify-items: center;
@@ -38,6 +38,22 @@
                 grid-area: 1 / 2 / 3 / 3;
                 text-align: center;
             }
+
+            .Knob {
+                user-select: none;
+                width: 50px;
+                height: 50px;
+                border-radius: 25px;
+                background-color: gray;
+            }
+
+            .Knob-box {
+                border: 1px solid black;
+                /* position: relative; */
+                width: 200px;
+                height: 200px;
+                border-radius: 200px;
+            }
         </style>
     </head>
     <body>
@@ -50,8 +66,8 @@
                 <div class="button">3</div>
                 <div class="button">4</div>
             </div>
-            <div id="leftAnalog">Left<br />Analogue</div>
-            <div id="rightAnalog">Right<br />Analogue</div>
+            <div id="leftAnalog"><div class="Knob-box"><div class="Knob"></div></div></div>
+            <div id="rightAnalog"><div class="Knob-box"><div class="Knob"></div></div></div>
             <div id="center">Centre</div>
         </div>
 
